# experimental

./: .travis.yml  CHANGES.rst  CompositeSurveyImage.py  MeasureZLPStability.py  README.rst  meta.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
docs/: conf.py  manual.rst
nion/experimental/: Wizard.py
nionswift_plugin/drift_correction/: drift_correction.py  settings_dialog.py
nionswift_plugin/drift_correction/resources/html/: objects.inv
nionswift_plugin/drift_correction/resources/html/_sources/: index.rst.txt
nionswift_plugin/eels_tools/: __init__.py
nionswift_plugin/filters/: __init__.py
nionswift_plugin/misc/: __init__.py
nionswift_plugin/nion_experimental_4dtools/: CenterOfMass4D.py  ComputationUI.py  DarkCorrection4D.py  DataCache.py  FramewiseDarkCorrection.py  ImageChooser.py  Map4D.py  Map4DRGB.py  README.md  __init__.py
nionswift_plugin/nion_experimental_4dtools/test/: Computations4D_test.py
nionswift_plugin/nion_experimental_tools/: AffineTransformImage.py  AlignMultiSI.py  AlignSequenceOfMultiDimensionalData.py  DoubleGaussian.py  FindLocalMaxima.py  IESquarePlot.py  MakeColorCOM.py  MakeIDPC.py  MeasureZLP.py  MultiDimensionalProcessing.py  SequenceSplitJoin.py  __init__.py
nionswift_plugin/nion_experimental_tools/test/: AffineTransformImage_test.py  FindLocalMaximaTest.py  MultiDimensionalProcessing_test.py
scripts/: AlignZLP.py  FindInterface.py  MeasureZLPStability.py  MultiEELS.py
